--- a/resume.tex
+++ b/resume.tex
@@ -1,7 +1,6 @@
 %-------------------------
 % Resume in Latex
-% Author : Jake Gutierrez
-% Based off of: https://github.com/sb2nov/resume
+% Based on a template by Jake Gutierrez
 % License : MIT
 %------------------------
 
@@ -20,18 +19,9 @@
 \usepackage{tabularx}
 \input{glyphtounicode}
 
-
 %----------FONT OPTIONS----------
-% sans-serif
-% \usepackage[sfdefault]{FiraSans}
-% \usepackage[sfdefault]{roboto}
-% \usepackage[sfdefault]{noto-sans}
-% \usepackage[default]{sourcesanspro}
-
-% serif
-% \usepackage{CormorantGaramond}
-% \usepackage{charter}
-
+% sans-serif options: \usepackage[sfdefault]{FiraSans}, \usepackage[sfdefault]{roboto}, \usepackage[sfdefault]{noto-sans}, \usepackage[default]{sourcesanspro}
+% serif options: \usepackage{CormorantGaramond}, \usepackage{charter}
 
 \pagestyle{fancy}
 \fancyhf{} % clear all header and footer fields
@@ -96,123 +86,115 @@
 
 \newcommand{\resumeSubHeadingListStart}{\begin{itemize}[leftmargin=0.15in, label={}]}
 \newcommand{\resumeSubHeadingListEnd}{\end{itemize}}
-\newcommand{\resumeItemListStart}{\begin{itemize}}
+\newcommand{\resumeItemListStart}{\begin{itemize}}\vspace{-70pt}
 \newcommand{\resumeItemListEnd}{\end{itemize}\vspace{-5pt}}
+\newcommand{\sectionwithvspace}[1]{%
+  \vspace{-10pt}
+  \section{#1}
+  \vspace{-2pt}
+}
+
+%-------------------------------------------
 
 %-------------------------------------------
 %%%%%%  RESUME STARTS HERE  %%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
 \begin{document}
 
 %----------HEADING----------
-% \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
-%   \textbf{\href{http://sourabhbajaj.com/}{\Large Sourabh Bajaj}} & Email : \href{mailto:sourabh@sourabhbajaj.com}{sourabh@sourabhbajaj.com}\\
-%   \href{http://sourabhbajaj.com/}{http://www.sourabhbajaj.com} & Mobile : +1-123-456-7890 \\
-% \end{tabular*}
-
 \begin{center}
-    \textbf{\Huge \scshape Jake Ryan} \\ \vspace{1pt}
-    \small 123-456-7890 $|$ \href{mailto:x@x.com}{\underline{jake@su.edu}} $|$ 
-    \href{https://linkedin.com/in/...}{\underline{linkedin.com/in/jake}} $|$
-    \href{https://github.com/...}{\underline{github.com/jake}}
+    \textbf{\Huge \scshape Ryan Chen Rui Yang} \\ \vspace{1pt}
+    \small (+65) 97322077 $|$ \href{mailto:ryanchen@live.com.sg}{\underline{ryanchen@live.com.sg}} $|$ 
+    \href{https://linkedin.com/in/ryanno3o}{\underline{linkedin.com/in/ryanno3o}} $|$
+    \href{https://github.com/bipplane}{\underline{github.com/bipplane}}
 \end{center}
+\vspace{-12pt}
 
+%-----------WORK EXPERIENCE-----------
+\sectionwithvspace{Work Experience}
+
+  \begin{itemize}[leftmargin=0.15in, label={}, topsep=0pt, partopsep=0pt]
+    \item 
+      \begin{tabular*}{0.97\textwidth}[t]{l@{\extracolsep{\fill}}r}
+        \textbf{Cloud Engineer Intern – xCloud, HTX} & {\small May 2025 -- Aug 2025} \\
+      \end{tabular*}\\
+          \begin{itemize}[leftmargin=0.14in, topsep=0pt, partopsep=0pt, itemsep=0pt]
+      \item\small{Engineered and deployed automated workflows using Microsoft Power Platform and Workato, implementing an automated image ingestion pipeline for HTX HR using Power Automate and cloud storage integration, providing a reliable, production-ready workflow with end-to-end documentation.}
+      \item\small{Deployed an end-to-end automated solution for tracking external contractor leave by connecting a SharePoint data source with an external API, reducing time spent on data syncing and email tracking across departments.}
+      \item\small{Operated with minimal supervision to facilitate and organise cloud solutions, while working alongside DevOps, security, and product teams to address challenges and manage resources of 4 projects in a dynamic setting.}
+      \end{itemize}
+  \end{itemize}
 
 %-----------EDUCATION-----------
-\section{Education}
-  \resumeSubHeadingListStart
-    \resumeSubheading
-      {Southwestern University}{Georgetown, TX}
-      {Bachelor of Arts in Computer Science, Minor in Business}{Aug. 2018 -- May 2021}
-    \resumeSubheading
-      {Blinn College}{Bryan, TX}
-      {Associate's in Liberal Arts}{Aug. 2014 -- May 2018}
-  \resumeSubHeadingListEnd
-
-
-%-----------EXPERIENCE-----------
-\section{Experience}
-  \resumeSubHeadingListStart
-
-    \resumeSubheading
-      {Undergraduate Research Assistant}{June 2020 -- Present}
-      {Texas A\&M University}{College Station, TX}
-      \resumeItemListStart
-        \resumeItem{Developed a REST API using FastAPI and PostgreSQL to store data from learning management systems}
-        \resumeItem{Developed a full-stack web application using Flask, React, PostgreSQL and Docker to analyze GitHub data}
-        \resumeItem{Explored ways to visualize GitHub collaboration in a classroom setting}
-      \resumeItemListEnd
-      
-% -----------Multiple Positions Heading-----------
-%    \resumeSubSubheading
-%     {Software Engineer I}{Oct 2014 - Sep 2016}
-%     \resumeItemListStart
-%        \resumeItem{Apache Beam}
-%          {Apache Beam is a unified model for defining both batch and streaming data-parallel processing pipelines}
-%     \resumeItemListEnd
-%    \resumeSubHeadingListEnd
-%-------------------------------------------
-
-    \resumeSubheading
-      {Information Technology Support Specialist}{Sep. 2018 -- Present}
-      {Southwestern University}{Georgetown, TX}
-      \resumeItemListStart
-        \resumeItem{Communicate with managers to set up campus computers used on campus}
-        \resumeItem{Assess and troubleshoot computer problems brought by students, faculty and staff}
-        \resumeItem{Maintain upkeep of computers, classroom equipment, and 200 printers across campus}
-    \resumeItemListEnd
-
-    \resumeSubheading
-      {Artificial Intelligence Research Assistant}{May 2019 -- July 2019}
-      {Southwestern University}{Georgetown, TX}
-      \resumeItemListStart
-        \resumeItem{Explored methods to generate video game dungeons based off of \emph{The Legend of Zelda}}
-        \resumeItem{Developed a game in Java to test the generated dungeons}
-        \resumeItem{Contributed 50K+ lines of code to an established codebase via Git}
-        \resumeItem{Conducted  a human subject study to determine which video game dungeon generation technique is enjoyable}
-        \resumeItem{Wrote an 8-page paper and gave multiple presentations on-campus}
-        \resumeItem{Presented virtually to the World Conference on Computational Intelligence}
-      \resumeItemListEnd
-
-  \resumeSubHeadingListEnd
-
+\sectionwithvspace{Education}
+  \begin{itemize}[leftmargin=0.15in, label={}, topsep=0pt, partopsep=0pt, itemsep=0pt]
+    \item
+      \begin{tabular*}{0.97\textwidth}[t]{l@{\extracolsep{\fill}}r}
+        \textbf{National University of Singapore} & \small Aug 2023 -- May 2027 \\
+        \textit{\small Bachelor of Computing (Hons.) Computer Science}
+      \end{tabular*}
+        \begin{itemize}[leftmargin=0.14in, topsep=0pt, partopsep=0pt, itemsep=0pt]
+      \item\small{Relevant modules taken: Data Structures and Algorithms (CS2040C), Programming Methodology (CS2030S), Computer Networks (CS2105), Software Engineering (CS2103T), Wireless Networking (CS4222)}
+        \item\small{AY24/25 NUS Raffles Hall Executive Committee}
+        \item\small{AY25/26 CS2103T Student Teaching Assistant, Student Mentor}
+        \item\small{GPA: 4.50, First Class Honours}
+              \end{itemize}
+      \end{itemize}
 
 %-----------PROJECTS-----------
-\section{Projects}
-    \resumeSubHeadingListStart
-      \resumeProjectHeading
-          {\textbf{Gitlytics} $|$ \emph{Python, Flask, React, PostgreSQL, Docker}}{June 2020 -- Present}
-          \resumeItemListStart
-            \resumeItem{Developed a full-stack web application using with Flask serving a REST API with React as the frontend}
-            \resumeItem{Implemented GitHub OAuth to get data from user’s repositories}
-            \resumeItem{Visualized GitHub data to show collaboration}
-            \resumeItem{Used Celery and Redis for asynchronous tasks}
-          \resumeItemListEnd
-      \resumeProjectHeading
-          {\textbf{Simple Paintball} $|$ \emph{Spigot API, Java, Maven, TravisCI, Git}}{May 2018 -- May 2020}
-          \resumeItemListStart
-            \resumeItem{Developed a Minecraft server plugin to entertain kids during free time for a previous job}
-            \resumeItem{Published plugin to websites gaining 2K+ downloads and an average 4.5/5-star review}
-            \resumeItem{Implemented continuous delivery using TravisCI to build the plugin upon new a release}
-            \resumeItem{Collaborated with Minecraft server administrators to suggest features and get feedback about the plugin}
-          \resumeItemListEnd
-    \resumeSubHeadingListEnd
+\sectionwithvspace{Projects}
+    \begin{itemize}[leftmargin=0.15in, label={}, topsep=0pt, partopsep=0pt, itemsep=0pt]
+      \item
+        \begin{tabular*}{0.97\textwidth}{l@{\extracolsep{\fill}}r}
+          \textbf{EcoTrack, Team Co-lead, NUS LifeHack 2025 Winner} & \small Jun 2025 \\
+        \end{tabular*}
+          \begin{itemize}[leftmargin=0.14in, topsep=0pt, partopsep=0pt, itemsep=0pt]
+            \item\small{Built an AI-driven "Wikipedia of product lifecycles" integrating a Chrome extension, interactive dashboard, and Telegram bot to generate community-verified sustainability scores and lifecycle summaries within a 48-hour timeframe.}
+            \item\small{Engineered backend AI pipeline with OpenAI embedding, Postgres (including vector storage), and a custom tree-based algorithm to scale lifecycle summarisation, maintain performance, and handle 1000+ events per product.}
+          \end{itemize}
+      \item
+        \begin{tabular*}{0.97\textwidth}{l@{\extracolsep{\fill}}r}
+          \textbf{TsFraudPmo, Team Co-lead, DSTA BrainHack CODE\_EXP Finalist} & \small May-Jun 2025 \\
+        \end{tabular*}
+          \begin{itemize}[leftmargin=0.14in, topsep=0pt, partopsep=0pt, itemsep=0pt]
+            \item\small{Co-led development of TsFraudPmo, a real-time scam response ecosystem integrating a mobile app and Telegram bot to enable instant user reporting and rapid dissemination of verified scam intelligence.}
+            \item\small{Implemented a custom LLM pipeline, leveraging prompt engineering, semantic embedding, and real-time input processing, transforming raw user reports into over 100 validated insights and concise summaries, enhancing data utility by 40\%.}
+            \item\small{Collaborated closely with a 3-person team and mentor to deliver a production-ready system under competition constraints, demonstrating strong product focus and cross-functional coordination.}
+          \end{itemize}
+      \item
+        \begin{tabular*}{0.97\textwidth}{l@{\extracolsep{\fill}}r}
+          \textbf{TutorRec, Team Lead} & \small Feb 2025 \\
+        \end{tabular*}
+          \begin{itemize}[leftmargin=0.14in, topsep=0pt, partopsep=0pt, itemsep=0pt]
+             \item\small{Developed a cross-platform desktop application with both CLI and GUI to streamline student supervision for private tutors, reducing administrative overhead by an estimated 30\% for over 100 students.}
+             \item\small{Collaborated with a team of 4 to organise task distribution, brainstorm new application features, and achieve over 96\% code coverage through comprehensive test case development.}
+             \item\small{Orchestrated team communication and accelerated progress by managing resources under pressure, leading to the on-time delivery of 10+ key features and exceeding expected deliverables in a high-stakes environment.}
+          \end{itemize}
+      \item
+        \begin{tabular*}{0.97\textwidth}{l@{\extracolsep{\fill}}r}
+          \textbf{RHDevs Inter-hall Hackathon, Team Co-lead} & \small Dec 2023 \\
+        \end{tabular*}
+          \begin{itemize}[leftmargin=0.14in, topsep=0pt, partopsep=0pt, itemsep=0pt, parsep=0pt]
+            \item\small{Developed and deployed a custom Telegram bot to enhance the room bidding process in residential halls, improving accessibility for 500+ residents and cut down bidding times by an estimated 50\%.}
+            \item\small{Led a team of 3 to clinch the award for 'Most Technical Hack', showcasing our ability to develop and implement a sophisticated project within a 24-hour time frame.}
+          \end{itemize}
+    \end{itemize}
 
+%-----------CERTIFICATIONS-----------
+\sectionwithvspace{Certifications}
+    \begin{itemize}[leftmargin=0.15in, label={}, topsep=0pt, partopsep=0pt]
+        \item\small{
+        \textbf{CS50's Introduction to Artificial Intelligence with Python, CS50's Introduction to Databases with SQL, SCS-AWS GenAI (Foundational) Programme}\\
+        }
+    \end{itemize}
 
-
-%
-%-----------PROGRAMMING SKILLS-----------
-\section{Technical Skills}
- \begin{itemize}[leftmargin=0.15in, label={}]
-    \small{\item{
-     \textbf{Languages}{: Java, Python, C/C++, SQL (Postgres), JavaScript, HTML/CSS, R} \\
-     \textbf{Frameworks}{: React, Node.js, Flask, JUnit, WordPress, Material-UI, FastAPI} \\
-     \textbf{Developer Tools}{: Git, Docker, TravisCI, Google Cloud Platform, VS Code, Visual Studio, PyCharm, IntelliJ, Eclipse} \\
-     \textbf{Libraries}{: pandas, NumPy, Matplotlib}
-    }}
+%-----------TECHNICAL SKILLS-----------
+\sectionwithvspace{Technical Skills}
+ \begin{itemize}[leftmargin=0.15in, label={}, topsep=0pt, partopsep=0pt]
+    \item\small{
+     \textbf{Programming \& Database Languages}{: Python, C++, Java} \\
+     \textbf{Programming Tools}{: Microsoft Power Platform, JavaFX, Gradle, CodeCov}
+    }
  \end{itemize}
-
 
 %-------------------------------------------
 \end{document}
