--- a/resume.tex
+++ b/resume.tex
@@ -84,10 +84,12 @@
 
 \renewcommand\labelitemii{$\vcenter{\hbox{\tiny$\bullet$}}$}
 
-\newcommand{\resumeSubHeadingListStart}{\begin{itemize}[leftmargin=0.15in, label={}]}
+\newcommand{\resumeSubHeadingListStart}{\begin{itemize}[leftmargin=0.15in, label={}, topsep=0pt, partopsep=0pt]
+}
 \newcommand{\resumeSubHeadingListEnd}{\end{itemize}}
-\newcommand{\resumeItemListStart}{\begin{itemize}}\vspace{-70pt}
-\newcommand{\resumeItemListEnd}{\end{itemize}\vspace{-5pt}}
+\newcommand{\resumeItemListStart}{ \begin{itemize}[leftmargin=0.15in, label={}, topsep=0pt, partopsep=0pt]
+}\vspace{-10pt}
+\newcommand{\resumeItemListEnd}{\end{itemize}\vspace{-10pt}}
 \newcommand{\sectionwithvspace}[1]{%
   \vspace{-10pt}
   \section{#1}
@@ -107,7 +109,54 @@
     \href{https://linkedin.com/in/ryanno3o}{\underline{linkedin.com/in/ryanno3o}} $|$
     \href{https://github.com/bipplane}{\underline{github.com/bipplane}}
 \end{center}
-\vspace{-12pt}
+\vspace{-10pt}
+
+%-----------PROJECTS-----------
+\sectionwithvspace{Projects}
+    \begin{itemize}[leftmargin=0.15in, label={}, topsep=0pt, partopsep=0pt, itemsep=0pt]
+      \item
+        \begin{tabular*}{0.97\textwidth}{l@{\extracolsep{\fill}}r}
+          \textbf{EcoTrack, Team Co-lead, NUS LifeHack 2025 Winner} & \small Jun 2025 \\
+        \end{tabular*}
+        \vspace{-4pt}
+          \begin{itemize}[leftmargin=0.14in, topsep=0pt, partopsep=0pt, itemsep=0pt]
+            \item\small{Built an AI-driven "Wikipedia of product lifecycles" integrating a Chrome extension, interactive dashboard, and Telegram bot to generate community-verified sustainability scores and lifecycle summaries within a 48-hour timeframe.}
+            \item\small{Engineered backend AI pipeline with OpenAI embedding, Postgres (including vector storage), and a custom tree-based algorithm to scale lifecycle summarisation, maintain performance, and handle 1000+ events per product.}
+          \end{itemize}
+          \vspace{-2pt}
+      \item
+        \begin{tabular*}{0.97\textwidth}{l@{\extracolsep{\fill}}r}
+          \textbf{TsFraudPmo, Team Co-lead, DSTA BrainHack CODE\_EXP Finalist} & \small May -- Jun 2025 \\
+        \end{tabular*}
+        \vspace{-4pt}
+          \begin{itemize}[leftmargin=0.14in, topsep=0pt, partopsep=0pt, itemsep=0pt]
+            \item\small{Co-led development of TsFraudPmo, a real-time scam response ecosystem integrating a mobile app and Telegram bot to enable instant user reporting and rapid dissemination of verified scam intelligence.}
+            \item\small{Implemented a custom LLM pipeline, leveraging prompt engineering, semantic embedding, and real-time input processing, transforming raw user reports into over 100 validated insights and concise summaries, enhancing data utility by 40\%.}
+            \item\small{Collaborated closely with a 3-person team and mentor to deliver a production-ready system under competition constraints, demonstrating strong product focus and cross-functional coordination.}
+          \end{itemize}
+          \vspace{-2pt}
+      \item
+        \begin{tabular*}{0.97\textwidth}{l@{\extracolsep{\fill}}r}
+          \textbf{TutorRec, Team Lead} & \small Feb 2025 \\
+        \end{tabular*}
+        \vspace{-4pt}
+          \begin{itemize}[leftmargin=0.14in, topsep=0pt, partopsep=0pt, itemsep=0pt]
+             \item\small{Developed a cross-platform desktop application with both CLI and GUI to streamline student supervision for private tutors, reducing administrative overhead by an estimated 30\% for over 100 students.}
+             \item\small{Collaborated with a team of 4 to organise task distribution, brainstorm new application features, and achieve over 96\% code coverage through comprehensive test case development.}
+             \item\small{Orchestrated team communication and accelerated progress by managing resources under pressure, leading to the on-time delivery of 10+ key features and exceeding expected deliverables in a high-stakes environment.}
+          \end{itemize}
+          \vspace{-2pt}
+      \item
+        \begin{tabular*}{0.97\textwidth}{l@{\extracolsep{\fill}}r}
+          \textbf{RHDevs Inter-hall Hackathon, Team Co-lead} & \small Dec 2023 \\
+        \end{tabular*}
+        \vspace{-4pt}
+          \begin{itemize}[leftmargin=0.14in, topsep=0pt, partopsep=0pt, itemsep=0pt, parsep=0pt]
+            \item\small{Developed and deployed a custom Telegram bot to enhance the room bidding process in residential halls, improving accessibility for 500+ residents and cut down bidding times by an estimated 50\%.}
+            \item\small{Led a team of 3 to clinch the award for 'Most Technical Hack', showcasing our ability to develop and implement a sophisticated project within a 24-hour time frame.}
+          \end{itemize}
+    \end{itemize}
+      \vspace{-2pt}
 
 %-----------WORK EXPERIENCE-----------
 \sectionwithvspace{Work Experience}
@@ -117,6 +166,7 @@
       \begin{tabular*}{0.97\textwidth}[t]{l@{\extracolsep{\fill}}r}
         \textbf{Cloud Engineer Intern – xCloud, HTX} & {\small May 2025 -- Aug 2025} \\
       \end{tabular*}\\
+      \vspace{0pt}
           \begin{itemize}[leftmargin=0.14in, topsep=0pt, partopsep=0pt, itemsep=0pt]
       \item\small{Engineered and deployed automated workflows using Microsoft Power Platform and Workato, implementing an automated image ingestion pipeline for HTX HR using Power Automate and cloud storage integration, providing a reliable, production-ready workflow with end-to-end documentation.}
       \item\small{Deployed an end-to-end automated solution for tracking external contractor leave by connecting a SharePoint data source with an external API, reducing time spent on data syncing and email tracking across departments.}
@@ -132,6 +182,7 @@
         \textbf{National University of Singapore} & \small Aug 2023 -- May 2027 \\
         \textit{\small Bachelor of Computing (Hons.) Computer Science}
       \end{tabular*}
+        \vspace{-4pt}
         \begin{itemize}[leftmargin=0.14in, topsep=0pt, partopsep=0pt, itemsep=0pt]
       \item\small{Relevant modules taken: Data Structures and Algorithms (CS2040C), Programming Methodology (CS2030S), Computer Networks (CS2105), Software Engineering (CS2103T), Wireless Networking (CS4222)}
         \item\small{AY24/25 NUS Raffles Hall Executive Committee}
@@ -139,45 +190,6 @@
         \item\small{GPA: 4.50, First Class Honours}
               \end{itemize}
       \end{itemize}
-
-%-----------PROJECTS-----------
-\sectionwithvspace{Projects}
-    \begin{itemize}[leftmargin=0.15in, label={}, topsep=0pt, partopsep=0pt, itemsep=0pt]
-      \item
-        \begin{tabular*}{0.97\textwidth}{l@{\extracolsep{\fill}}r}
-          \textbf{EcoTrack, Team Co-lead, NUS LifeHack 2025 Winner} & \small Jun 2025 \\
-        \end{tabular*}
-          \begin{itemize}[leftmargin=0.14in, topsep=0pt, partopsep=0pt, itemsep=0pt]
-            \item\small{Built an AI-driven "Wikipedia of product lifecycles" integrating a Chrome extension, interactive dashboard, and Telegram bot to generate community-verified sustainability scores and lifecycle summaries within a 48-hour timeframe.}
-            \item\small{Engineered backend AI pipeline with OpenAI embedding, Postgres (including vector storage), and a custom tree-based algorithm to scale lifecycle summarisation, maintain performance, and handle 1000+ events per product.}
-          \end{itemize}
-      \item
-        \begin{tabular*}{0.97\textwidth}{l@{\extracolsep{\fill}}r}
-          \textbf{TsFraudPmo, Team Co-lead, DSTA BrainHack CODE\_EXP Finalist} & \small May-Jun 2025 \\
-        \end{tabular*}
-          \begin{itemize}[leftmargin=0.14in, topsep=0pt, partopsep=0pt, itemsep=0pt]
-            \item\small{Co-led development of TsFraudPmo, a real-time scam response ecosystem integrating a mobile app and Telegram bot to enable instant user reporting and rapid dissemination of verified scam intelligence.}
-            \item\small{Implemented a custom LLM pipeline, leveraging prompt engineering, semantic embedding, and real-time input processing, transforming raw user reports into over 100 validated insights and concise summaries, enhancing data utility by 40\%.}
-            \item\small{Collaborated closely with a 3-person team and mentor to deliver a production-ready system under competition constraints, demonstrating strong product focus and cross-functional coordination.}
-          \end{itemize}
-      \item
-        \begin{tabular*}{0.97\textwidth}{l@{\extracolsep{\fill}}r}
-          \textbf{TutorRec, Team Lead} & \small Feb 2025 \\
-        \end{tabular*}
-          \begin{itemize}[leftmargin=0.14in, topsep=0pt, partopsep=0pt, itemsep=0pt]
-             \item\small{Developed a cross-platform desktop application with both CLI and GUI to streamline student supervision for private tutors, reducing administrative overhead by an estimated 30\% for over 100 students.}
-             \item\small{Collaborated with a team of 4 to organise task distribution, brainstorm new application features, and achieve over 96\% code coverage through comprehensive test case development.}
-             \item\small{Orchestrated team communication and accelerated progress by managing resources under pressure, leading to the on-time delivery of 10+ key features and exceeding expected deliverables in a high-stakes environment.}
-          \end{itemize}
-      \item
-        \begin{tabular*}{0.97\textwidth}{l@{\extracolsep{\fill}}r}
-          \textbf{RHDevs Inter-hall Hackathon, Team Co-lead} & \small Dec 2023 \\
-        \end{tabular*}
-          \begin{itemize}[leftmargin=0.14in, topsep=0pt, partopsep=0pt, itemsep=0pt, parsep=0pt]
-            \item\small{Developed and deployed a custom Telegram bot to enhance the room bidding process in residential halls, improving accessibility for 500+ residents and cut down bidding times by an estimated 50\%.}
-            \item\small{Led a team of 3 to clinch the award for 'Most Technical Hack', showcasing our ability to develop and implement a sophisticated project within a 24-hour time frame.}
-          \end{itemize}
-    \end{itemize}
 
 %-----------CERTIFICATIONS-----------
 \sectionwithvspace{Certifications}
@@ -189,10 +201,12 @@
 
 %-----------TECHNICAL SKILLS-----------
 \sectionwithvspace{Technical Skills}
- \begin{itemize}[leftmargin=0.15in, label={}, topsep=0pt, partopsep=0pt]
-    \item\small{
-     \textbf{Programming \& Database Languages}{: Python, C++, Java} \\
-     \textbf{Programming Tools}{: Microsoft Power Platform, JavaFX, Gradle, CodeCov}
+ \begin{itemize}[leftmargin=0.15in, label={}, topsep=0pt, partopsep=0pt, itemsep=0pt, parsep=0pt]
+    \item\footnotesize{
+     \textbf{Languages}{: Python, C++, Java, SQL, TypeScript, HTML, CSS} \\
+     \textbf{Frameworks \& Libraries}{: React, JavaFX, Power Automate, OpenAI API, Telegram Bot API} \\
+     \textbf{Developer Tools}{: Git, GitHub, Docker, Gradle, CodeCov, Supabase} \\
+     \textbf{Cloud \& Platforms}{: Microsoft Power Platform, Workato}
     }
  \end{itemize}
 
