Fix workflow fail

--- a/resume.tex
+++ b/resume.tex
@@ -17,7 +17,7 @@
 \usepackage{fancyhdr}
 \usepackage[english]{babel}
 \usepackage{tabularx}
-\input{glyphtounicode}
+%\input{glyphtounicode}
 
 %----------FONT OPTIONS----------
 % sans-serif options: \usepackage[sfdefault]{FiraSans}, \usepackage[sfdefault]{roboto}, \usepackage[sfdefault]{noto-sans}, \usepackage[default]{sourcesanspro}
