Updates from Overleaf

--- a/resume.tex
+++ b/resume.tex
@@ -84,12 +84,6 @@
 
 \renewcommand\labelitemii{$\vcenter{\hbox{\tiny$\bullet$}}$}
 
-\newcommand{\resumeSubHeadingListStart}{\begin{itemize}[leftmargin=0.15in, label={}, topsep=0pt, partopsep=0pt]
-}
-\newcommand{\resumeSubHeadingListEnd}{\end{itemize}}
-\newcommand{\resumeItemListStart}{ \begin{itemize}[leftmargin=0.15in, label={}, topsep=0pt, partopsep=0pt]
-}\vspace{-10pt}
-\newcommand{\resumeItemListEnd}{\end{itemize}\vspace{-10pt}}
 \newcommand{\sectionwithvspace}[1]{%
   \vspace{-10pt}
   \section{#1}
@@ -111,6 +105,22 @@
 \end{center}
 \vspace{-10pt}
 
+%-----------WORK EXPERIENCE-----------
+\sectionwithvspace{Work Experience}
+
+  \begin{itemize}[leftmargin=0.15in, label={}, topsep=0pt, partopsep=0pt]
+    \item 
+      \begin{tabular*}{0.97\textwidth}[t]{l@{\extracolsep{\fill}}r}
+        \textbf{Cloud Engineer Intern – xCloud, HTX} & {\small May 2025 - Aug 2025} \\
+      \end{tabular*}\\
+      \vspace{0pt}
+          \begin{itemize}[leftmargin=0.14in, topsep=0pt, partopsep=0pt, itemsep=0pt]
+      \item\small{Engineered and deployed automated workflows using Microsoft Power Platform, implementing an automated image ingestion pipeline for HTX HR using Power Automate and cloud storage integration, providing a reliable, production-ready workflow with end-to-end documentation.}
+      \item\small{Deployed an end-to-end automated solution for tracking external contractor leave by connecting a SharePoint data source with an external API, reducing time spent on data syncing and email tracking across departments.}
+      \item\small{Operated with minimal supervision to facilitate and organise cloud solutions, working alongside DevOps, security, and product teams to address challenges and manage resources of 4 projects in a dynamic setting.}
+      \end{itemize}
+  \end{itemize}
+
 %-----------PROJECTS-----------
 \sectionwithvspace{Projects}
     \begin{itemize}[leftmargin=0.15in, label={}, topsep=0pt, partopsep=0pt, itemsep=0pt]
@@ -126,18 +136,18 @@
           \vspace{-2pt}
       \item
         \begin{tabular*}{0.97\textwidth}{l@{\extracolsep{\fill}}r}
-          \textbf{TsFraudPmo, Team Co-lead, DSTA BrainHack CODE\_EXP Finalist} & \small May -- Jun 2025 \\
+          \textbf{TsFraudPmo, Team Co-lead, DSTA BrainHack CODE\_EXP Finalist} & \small May - Jun 2025 \\
         \end{tabular*}
         \vspace{-4pt}
           \begin{itemize}[leftmargin=0.14in, topsep=0pt, partopsep=0pt, itemsep=0pt]
             \item\small{Co-led development of TsFraudPmo, a real-time scam response ecosystem integrating a mobile app and Telegram bot to enable instant user reporting and rapid dissemination of verified scam intelligence.}
-            \item\small{Implemented a custom LLM pipeline, leveraging prompt engineering, semantic embedding, and real-time input processing, transforming raw user reports into over 100 validated insights and concise summaries, enhancing data utility by 40\%.}
+            \item\small{Implemented custom LLM pipelines, leveraging prompt engineering, semantic embedding, and real-time input processing, transforming raw user reports into over 100 validated insights and concise summaries.}
             \item\small{Collaborated closely with a 3-person team and mentor to deliver a production-ready system under competition constraints, demonstrating strong product focus and cross-functional coordination.}
           \end{itemize}
           \vspace{-2pt}
       \item
         \begin{tabular*}{0.97\textwidth}{l@{\extracolsep{\fill}}r}
-          \textbf{TutorRec, Team Lead} & \small Feb 2025 \\
+          \textbf{TutorRec, Team Lead} & \small Feb - May 2025 \\
         \end{tabular*}
         \vspace{-4pt}
           \begin{itemize}[leftmargin=0.14in, topsep=0pt, partopsep=0pt, itemsep=0pt]
@@ -152,35 +162,19 @@
         \end{tabular*}
         \vspace{-4pt}
           \begin{itemize}[leftmargin=0.14in, topsep=0pt, partopsep=0pt, itemsep=0pt, parsep=0pt]
-            \item\small{Developed and deployed a custom Telegram bot to enhance the room bidding process in residential halls, improving accessibility for 500+ residents and cut down bidding times by an estimated 50\%.}
-            \item\small{Led a team of 3 to clinch the award for 'Most Technical Hack', showcasing our ability to develop and implement a sophisticated project within a 24-hour time frame.}
+            \item\small{Developed and deployed a custom Telegram bot within a 24-hour timeframe to enhance the room bidding process in NUS residential halls, improving accessibility for 500+ residents and cut down bidding times by an estimated 50\%.}
+            \item\small{Led a team of 3 to clinch the award for 'Most Technical Hack', demonstrating rapid prototyping skills in a high-pressure environment.}
           \end{itemize}
     \end{itemize}
       \vspace{-2pt}
-
-%-----------WORK EXPERIENCE-----------
-\sectionwithvspace{Work Experience}
-
-  \begin{itemize}[leftmargin=0.15in, label={}, topsep=0pt, partopsep=0pt]
-    \item 
-      \begin{tabular*}{0.97\textwidth}[t]{l@{\extracolsep{\fill}}r}
-        \textbf{Cloud Engineer Intern – xCloud, HTX} & {\small May 2025 -- Aug 2025} \\
-      \end{tabular*}\\
-      \vspace{0pt}
-          \begin{itemize}[leftmargin=0.14in, topsep=0pt, partopsep=0pt, itemsep=0pt]
-      \item\small{Engineered and deployed automated workflows using Microsoft Power Platform and Workato, implementing an automated image ingestion pipeline for HTX HR using Power Automate and cloud storage integration, providing a reliable, production-ready workflow with end-to-end documentation.}
-      \item\small{Deployed an end-to-end automated solution for tracking external contractor leave by connecting a SharePoint data source with an external API, reducing time spent on data syncing and email tracking across departments.}
-      \item\small{Operated with minimal supervision to facilitate and organise cloud solutions, while working alongside DevOps, security, and product teams to address challenges and manage resources of 4 projects in a dynamic setting.}
-      \end{itemize}
-  \end{itemize}
 
 %-----------EDUCATION-----------
 \sectionwithvspace{Education}
   \begin{itemize}[leftmargin=0.15in, label={}, topsep=0pt, partopsep=0pt, itemsep=0pt]
     \item
       \begin{tabular*}{0.97\textwidth}[t]{l@{\extracolsep{\fill}}r}
-        \textbf{National University of Singapore} & \small Aug 2023 -- May 2027 \\
-        \textit{\small Bachelor of Computing (Hons.) Computer Science}
+        \textbf{National University of Singapore} & \small Aug 2023 - May 2027 \\
+        \text\small {Bachelor of Computing (Hons.) Computer Science}
       \end{tabular*}
         \vspace{-4pt}
         \begin{itemize}[leftmargin=0.14in, topsep=0pt, partopsep=0pt, itemsep=0pt]
