--- a/resume.tex
+++ b/resume.tex
@@ -174,7 +174,7 @@
     \item
       \begin{tabular*}{0.97\textwidth}[t]{l@{\extracolsep{\fill}}r}
         \textbf{National University of Singapore} & \small Aug 2023 - May 2027 \\
-        \text\small {Bachelor of Computing (Hons.) Computer Science}
+         {Bachelor of Computing (Hons.) Computer Science}
       \end{tabular*}
         \vspace{-4pt}
         \begin{itemize}[leftmargin=0.14in, topsep=0pt, partopsep=0pt, itemsep=0pt]
