--- a/resume.tex
+++ b/resume.tex
@@ -99,7 +99,7 @@
 %----------HEADING----------
 \begin{center}
     \textbf{\Huge \scshape Ryan Chen Rui Yang} \\ \vspace{1pt}
-    \small (+65) 97322077 $|$ \href{mailto:ryanchen@live.com.sg}{\underline{ryanchen@live.com.sg}} $|$ 
+    \small 97322077 $|$ \href{mailto:ryanchen@live.com.sg}{\underline{ryanchen@live.com.sg}} $|$ 
     \href{https://linkedin.com/in/ryanno3o}{\underline{linkedin.com/in/ryanno3o}} $|$
     \href{https://github.com/bipplane}{\underline{github.com/bipplane}}
 \end{center}
@@ -108,7 +108,18 @@
 %-----------WORK EXPERIENCE-----------
 \sectionwithvspace{Work Experience}
 
-  \begin{itemize}[leftmargin=0.15in, label={}, topsep=0pt, partopsep=0pt]
+  \begin{itemize}[leftmargin=0.15in, label={}, topsep=0pt, partopsep=0pt, itemsep=0pt]
+      \item 
+      \begin{tabular*}{0.97\textwidth}[t]{l@{\extracolsep{\fill}}r}
+        \textbf{Undergraduate Teaching Assistant – Software Engineering} & {\small Aug 2025 - Present} \\
+      \end{tabular*}\\
+      \vspace{0pt}
+          \begin{itemize}[leftmargin=0.14in, topsep=0pt, partopsep=0pt, itemsep=0pt]
+      \item\small{Assisted students in understanding foundational software engineering concepts in Java, including Git, CI/CD pipelines, comprehensive software testing, and architectural design.}
+      \item\small{Designed weekly lesson plans and contributed to the refinement and development of course materials, including walkthrough guides and sample code.}
+      \item\small{Reviewed and graded student code against established coding principles, delivering constructive feedback to foster best practices and improve code quality.}
+      \end{itemize}
+    \vspace{-2pt}
     \item 
       \begin{tabular*}{0.97\textwidth}[t]{l@{\extracolsep{\fill}}r}
         \textbf{Cloud Engineer Intern – xCloud, HTX} & {\small May 2025 - Aug 2025} \\
@@ -147,18 +158,7 @@
           \vspace{-2pt}
       \item
         \begin{tabular*}{0.97\textwidth}{l@{\extracolsep{\fill}}r}
-          \textbf{TutorRec, Team Lead} & \small Feb - May 2025 \\
-        \end{tabular*}
-        \vspace{-4pt}
-          \begin{itemize}[leftmargin=0.14in, topsep=0pt, partopsep=0pt, itemsep=0pt]
-             \item\small{Developed a cross-platform desktop application with both CLI and GUI to streamline student supervision for private tutors, reducing administrative overhead by an estimated 30\% for over 100 students.}
-             \item\small{Collaborated with a team of 4 to organise task distribution, brainstorm new application features, and achieve over 96\% code coverage through comprehensive test case development.}
-             \item\small{Orchestrated team communication and accelerated progress by managing resources under pressure, leading to the on-time delivery of 10+ key features and exceeding expected deliverables in a high-stakes environment.}
-          \end{itemize}
-          \vspace{-2pt}
-      \item
-        \begin{tabular*}{0.97\textwidth}{l@{\extracolsep{\fill}}r}
-          \textbf{RHDevs Inter-hall Hackathon, Team Co-lead} & \small Dec 2023 \\
+          \textbf{RHDevs Inter-hall Hackathon, Team Co-lead, First Runner-up} & \small Dec 2023 \\
         \end{tabular*}
         \vspace{-4pt}
           \begin{itemize}[leftmargin=0.14in, topsep=0pt, partopsep=0pt, itemsep=0pt, parsep=0pt]
@@ -179,8 +179,8 @@
         \vspace{-4pt}
         \begin{itemize}[leftmargin=0.14in, topsep=0pt, partopsep=0pt, itemsep=0pt]
       \item\small{Relevant modules taken: Data Structures and Algorithms (CS2040C), Programming Methodology (CS2030S), Computer Networks (CS2105), Software Engineering (CS2103T), Wireless Networking (CS4222)}
-        \item\small{AY24/25 NUS Raffles Hall Executive Committee}
-        \item\small{AY25/26 CS2103T Student Teaching Assistant, Student Mentor}
+        \item\small{AY24/25 NUS Raffles Hall Executive Committee, Vice Chairperson}
+        \item\small{AY25/26 CS2103T Software Engineering Student Mentor}
         \item\small{GPA: 4.50, First Class Honours}
               \end{itemize}
       \end{itemize}
@@ -189,7 +189,7 @@
 \sectionwithvspace{Certifications}
     \begin{itemize}[leftmargin=0.15in, label={}, topsep=0pt, partopsep=0pt]
         \item\small{
-        \textbf{CS50's Introduction to Artificial Intelligence with Python, CS50's Introduction to Databases with SQL, SCS-AWS GenAI (Foundational) Programme}\\
+        {CS50's Introduction to Artificial Intelligence with Python, CS50's Introduction to Databases with SQL, SCS-AWS GenAI (Foundational) Programme}\\
         }
     \end{itemize}
 
