--- a/resume.tex
+++ b/resume.tex
@@ -115,7 +115,7 @@
       \end{tabular*}\\
       \vspace{0pt}
           \begin{itemize}[leftmargin=0.14in, topsep=0pt, partopsep=0pt, itemsep=0pt]
-      \item\small{Assisted students in understanding foundational software engineering concepts in Java, including Git, CI/CD pipelines, comprehensive software testing, and architectural design.}
+      \item\small{Closely mentored 10 students in understanding foundational software engineering concepts in Java, including Git, CI/CD pipelines, comprehensive software testing, and architectural design.}
       \item\small{Designed weekly lesson plans and contributed to the refinement and development of course materials, including walkthrough guides and sample code.}
       \item\small{Reviewed and graded student code against established coding principles, delivering constructive feedback to foster best practices and improve code quality.}
       \end{itemize}
@@ -126,8 +126,8 @@
       \end{tabular*}\\
       \vspace{0pt}
           \begin{itemize}[leftmargin=0.14in, topsep=0pt, partopsep=0pt, itemsep=0pt]
-      \item\small{Engineered and deployed automated workflows using Microsoft Power Platform, implementing an automated image ingestion pipeline for HTX HR using Power Automate and cloud storage integration, providing a reliable, production-ready workflow with end-to-end documentation.}
-      \item\small{Deployed an end-to-end automated solution for tracking external contractor leave by connecting a SharePoint data source with an external API, reducing time spent on data syncing and email tracking across departments.}
+      \item\small{Engineered and deployed workflows using Microsoft Power Platform, implementing an image ingestion pipeline scheduler for HTX HR using Power Automate and cloud storage integration, providing a reliable, production-ready workflow with end-to-end documentation.}
+      \item\small{Expanded on a seamless end-to-end solution for tracking external contractor leave by connecting a SharePoint data source with an external API, reducing time spent on data syncing and email tracking across departments.}
       \item\small{Operated with minimal supervision to facilitate and organise cloud solutions, working alongside DevOps, security, and product teams to address challenges and manage resources of 4 projects in a dynamic setting.}
       \end{itemize}
   \end{itemize}
@@ -151,7 +151,7 @@
         \end{tabular*}
         \vspace{-4pt}
           \begin{itemize}[leftmargin=0.14in, topsep=0pt, partopsep=0pt, itemsep=0pt]
-            \item\small{Co-led development of TsFraudPmo, a real-time scam response ecosystem integrating a mobile app and Telegram bot to enable instant user reporting and rapid dissemination of verified scam intelligence.}
+            \item\small{Co-led development of a real-time scam response ecosystem, integrating a mobile app and Telegram bot to enable instant user reporting and rapid dissemination of verified scam intelligence.}
             \item\small{Implemented custom LLM pipelines, leveraging prompt engineering, semantic embedding, and real-time input processing, transforming raw user reports into over 100 validated insights and concise summaries.}
             \item\small{Collaborated closely with a 3-person team and mentor to deliver a production-ready system under competition constraints, demonstrating strong product focus and cross-functional coordination.}
           \end{itemize}
@@ -162,7 +162,7 @@
         \end{tabular*}
         \vspace{-4pt}
           \begin{itemize}[leftmargin=0.14in, topsep=0pt, partopsep=0pt, itemsep=0pt, parsep=0pt]
-            \item\small{Developed and deployed a custom Telegram bot within a 24-hour timeframe to enhance the room bidding process in NUS residential halls, improving accessibility for 500+ residents and cut down bidding times by an estimated 50\%.}
+            \item\small{Developed and deployed a custom Telegram bot within a 24-hour timeframe to enhance room bidding processes in NUS residential halls, improving accessibility for 500+ residents and cut down bidding times by an estimated 50\%.}
             \item\small{Led a team of 3 to clinch the award for 'Most Technical Hack', demonstrating rapid prototyping skills in a high-pressure environment.}
           \end{itemize}
     \end{itemize}
@@ -170,13 +170,12 @@
 
 %-----------EDUCATION-----------
 \sectionwithvspace{Education}
-  \begin{itemize}[leftmargin=0.15in, label={}, topsep=0pt, partopsep=0pt, itemsep=0pt]
+  \begin{itemize}[leftmargin=0.15in, label={}, topsep=0pt, partopsep=0pt, itemsep=0pt, parsep=0pt]
     \item
       \begin{tabular*}{0.97\textwidth}[t]{l@{\extracolsep{\fill}}r}
         \textbf{National University of Singapore} & \small Aug 2023 - May 2027 \\
          {Bachelor of Computing (Hons.) Computer Science}
       \end{tabular*}
-        \vspace{-4pt}
         \begin{itemize}[leftmargin=0.14in, topsep=0pt, partopsep=0pt, itemsep=0pt]
       \item\small{Relevant modules taken: Data Structures and Algorithms (CS2040C), Programming Methodology (CS2030S), Computer Networks (CS2105), Software Engineering (CS2103T), Wireless Networking (CS4222)}
         \item\small{AY24/25 NUS Raffles Hall Executive Committee, Vice Chairperson}
