--- a/resume.tex
+++ b/resume.tex
@@ -107,30 +107,47 @@
 
 %-----------WORK EXPERIENCE-----------
 \sectionwithvspace{Work Experience}
-
   \begin{itemize}[leftmargin=0.15in, label={}, topsep=0pt, partopsep=0pt, itemsep=0pt]
       \item 
       \begin{tabular*}{0.97\textwidth}[t]{l@{\extracolsep{\fill}}r}
-        \textbf{Undergraduate Teaching Assistant – Software Engineering} & {\small Aug 2025 - Present} \\
+        \textbf{Undergraduate Teaching Assistant – Software Engineering} & {\small Aug 2025 - Dec 2025} \\
       \end{tabular*}\\
       \vspace{0pt}
           \begin{itemize}[leftmargin=0.14in, topsep=0pt, partopsep=0pt, itemsep=0pt]
-      \item\small{Closely mentored 10 students in understanding foundational software engineering concepts in Java, including Git, CI/CD pipelines, comprehensive software testing, and architectural design.}
-      \item\small{Designed weekly lesson plans and contributed to the refinement and development of course materials, including walkthrough guides and sample code.}
-      \item\small{Reviewed and graded student code against established coding principles, delivering constructive feedback to foster best practices and improve code quality.}
+      \item\small{Mentored 10 students in Java, including Git, CI/CD pipelines, software testing, and software architecture, achieving a 100\% pass rate with B+ or better scores.}
+      \item\small{Contributed to refinement and development of course materials, including walkthrough guides and sample code.}
+      \item\small{Reviewed and graded student code against established coding principles, providing timely feedback to reduce errors in future submissions by about 30\%.}
       \end{itemize}
     \vspace{-2pt}
+
+
     \item 
       \begin{tabular*}{0.97\textwidth}[t]{l@{\extracolsep{\fill}}r}
         \textbf{Cloud Engineer Intern – xCloud, HTX} & {\small May 2025 - Aug 2025} \\
       \end{tabular*}\\
       \vspace{0pt}
           \begin{itemize}[leftmargin=0.14in, topsep=0pt, partopsep=0pt, itemsep=0pt]
-      \item\small{Engineered and deployed workflows using Microsoft Power Platform, implementing an image ingestion pipeline scheduler for HTX HR using Power Automate and cloud storage integration, providing a reliable, production-ready workflow with end-to-end documentation.}
-      \item\small{Expanded on a seamless end-to-end solution for tracking external contractor leave by connecting a SharePoint data source with an external API, reducing time spent on data syncing and email tracking across departments.}
-      \item\small{Operated with minimal supervision to facilitate and organise cloud solutions, working alongside DevOps, security, and product teams to address challenges and manage resources of 4 projects in a dynamic setting.}
+      \item\small{Implemented an automated image ingestion pipeline for HTX HR using Power Automate and Microsoft Dataverse, reducing manual data entry by 80\% every week, and ensuring 10\% availability for continued usage.}
+      \item\small{Used Workato to automate tracking of external contractor leave, connecting a SharePoint data source with an external interface, eliminating 20 hours spent monthly on data syncing and email tracking across departments.}
+      \item\small{Operated with minimal supervision to facilitate and organise cloud solutions, working alongside DevOps, project mamangers, and product teams to address challenges and manage the resources of 4 projects in a dynamic setting.}
       \end{itemize}
   \end{itemize}
+
+%-----------EDUCATION-----------
+\sectionwithvspace{Education}
+  \begin{itemize}[leftmargin=0.15in, label={}, topsep=0pt, partopsep=0pt, itemsep=0pt, parsep=0pt]
+    \item
+      \begin{tabular*}{0.97\textwidth}[t]{l@{\extracolsep{\fill}}r}
+        \textbf{National University of Singapore} & \small Aug 2023 - May 2027 \\
+         {Bachelor of Computing (Hons.) Computer Science}
+      \end{tabular*}
+        \begin{itemize}[leftmargin=0.14in, topsep=0pt, partopsep=0pt, itemsep=0pt]
+      \item\small{Relevant modules taken: Data Structures and Algorithms (CS2040C), Programming Methodology (CS2030S), Computer Networks (CS2105), Software Engineering (CS2103T), Wireless Networking (CS4222), Operating Systems (CS2106)}
+        \item\small{AY24/25 NUS Raffles Hall Executive Committee, Vice Chairperson}
+        \item\small{AY25/26 CS2103T Software Engineering Student Mentor}
+        \item\small{GPA: 4.45/5.00}
+              \end{itemize}
+      \end{itemize}
 
 %-----------PROJECTS-----------
 \sectionwithvspace{Projects}
@@ -142,7 +159,7 @@
         \vspace{-4pt}
           \begin{itemize}[leftmargin=0.14in, topsep=0pt, partopsep=0pt, itemsep=0pt]
             \item\small{Built an AI-driven "Wikipedia of product lifecycles" integrating a Chrome extension, interactive dashboard, and Telegram bot to generate community-verified sustainability scores and lifecycle summaries within a 48-hour timeframe.}
-            \item\small{Engineered backend AI pipeline with OpenAI embedding, Postgres (including vector storage), and a custom tree-based algorithm to scale lifecycle summarisation, maintain performance, and handle 1000+ events per product.}
+            \item\small{Engineered backend pipeline with OpenAI embeddings, Postgres (vector storage), and a custom tree-based algorithm to scale lifecycle summarisation, maintain performance with sub-500ms latency, and handle 1000+ events per product.}
           \end{itemize}
           \vspace{-2pt}
       \item
@@ -151,9 +168,9 @@
         \end{tabular*}
         \vspace{-4pt}
           \begin{itemize}[leftmargin=0.14in, topsep=0pt, partopsep=0pt, itemsep=0pt]
-            \item\small{Co-led development of a real-time scam response ecosystem, integrating a mobile app and Telegram bot to enable instant user reporting and rapid dissemination of verified scam intelligence.}
-            \item\small{Implemented custom LLM pipelines, leveraging prompt engineering, semantic embedding, and real-time input processing, transforming raw user reports into over 100 validated insights and concise summaries.}
-            \item\small{Collaborated closely with a 3-person team and mentor to deliver a production-ready system under competition constraints, demonstrating strong product focus and cross-functional coordination.}
+            \item\small{Co-led development of a real-time scam detection platform, integrating a mobile app and Telegram bot to enable instant user reporting and rapid dissemination of verified scam intelligence.}
+            \item\small{Implemented custom LLM pipelines, utilising prompt engineering, semantic embedding, and real-time input processing, transforming raw user reports into over 100 validated insights and concise summaries.}
+            \item\small{Collaborated closely as a 3-person team alongside a mentor to deliver a production-ready system under competition constraints, demonstrating strong product focus and cross-functional coordination.}
           \end{itemize}
           \vspace{-2pt}
       \item
@@ -168,40 +185,24 @@
     \end{itemize}
       \vspace{-2pt}
 
-%-----------EDUCATION-----------
-\sectionwithvspace{Education}
-  \begin{itemize}[leftmargin=0.15in, label={}, topsep=0pt, partopsep=0pt, itemsep=0pt, parsep=0pt]
-    \item
-      \begin{tabular*}{0.97\textwidth}[t]{l@{\extracolsep{\fill}}r}
-        \textbf{National University of Singapore} & \small Aug 2023 - May 2027 \\
-         {Bachelor of Computing (Hons.) Computer Science}
-      \end{tabular*}
-        \begin{itemize}[leftmargin=0.14in, topsep=0pt, partopsep=0pt, itemsep=0pt]
-      \item\small{Relevant modules taken: Data Structures and Algorithms (CS2040C), Programming Methodology (CS2030S), Computer Networks (CS2105), Software Engineering (CS2103T), Wireless Networking (CS4222)}
-        \item\small{AY24/25 NUS Raffles Hall Executive Committee, Vice Chairperson}
-        \item\small{AY25/26 CS2103T Software Engineering Student Mentor}
-        \item\small{GPA: 4.50, First Class Honours}
-              \end{itemize}
-      \end{itemize}
+%-----------TECHNICAL SKILLS-----------
+\sectionwithvspace{Technical Skills}
+ \begin{itemize}[leftmargin=0.15in, label={}, topsep=0pt, partopsep=0pt, itemsep=0pt, parsep=0pt]
+    \item\footnotesize{
+     \textbf{Languages}{: Python, C++, Java, SQL, TypeScript, HTML, CSS} \\
+     \textbf{Frameworks \& Libraries}{: React, JavaFX, OpenAI \&Gemini API, Telegram Bot API} \\
+     \textbf{Developer Tools}{: GitHub, Gradle, CodeCov, Supabase} \\
+     \textbf{Cloud \& Platforms}{: Azure, Microsoft Power Platform, Workato}
+    }
+ \end{itemize}
 
-%-----------CERTIFICATIONS-----------
+ %-----------CERTIFICATIONS-----------
 \sectionwithvspace{Certifications}
     \begin{itemize}[leftmargin=0.15in, label={}, topsep=0pt, partopsep=0pt]
         \item\small{
         {CS50's Introduction to Artificial Intelligence with Python, CS50's Introduction to Databases with SQL, SCS-AWS GenAI (Foundational) Programme}\\
         }
     \end{itemize}
-
-%-----------TECHNICAL SKILLS-----------
-\sectionwithvspace{Technical Skills}
- \begin{itemize}[leftmargin=0.15in, label={}, topsep=0pt, partopsep=0pt, itemsep=0pt, parsep=0pt]
-    \item\footnotesize{
-     \textbf{Languages}{: Python, C++, Java, SQL, TypeScript, HTML, CSS} \\
-     \textbf{Frameworks \& Libraries}{: React, JavaFX, Power Automate, OpenAI API, Telegram Bot API} \\
-     \textbf{Developer Tools}{: Git, GitHub, Docker, Gradle, CodeCov, Supabase} \\
-     \textbf{Cloud \& Platforms}{: Microsoft Power Platform, Workato}
-    }
- \end{itemize}
 
 %-------------------------------------------
 \end{document}
