--- a/resume.tex
+++ b/resume.tex
@@ -114,7 +114,7 @@
       \end{tabular*}\\
       \vspace{0pt}
           \begin{itemize}[leftmargin=0.14in, topsep=0pt, partopsep=0pt, itemsep=0pt]
-      \item\small{Mentored 10 students in Java, including Git, CI/CD pipelines, software testing, and software architecture, achieving a 100\% pass rate with B+ or better scores.}
+      \item\small{Mentored 10 students in Java, including Git, CI/CD pipelines, software testing, and software architecture for scalable and efficient systems, achieving a 100\% pass rate with B+ or better scores, and a tutor rating of 4.5/5.0.}
       \item\small{Contributed to refinement and development of course materials, including walkthrough guides and sample code.}
       \item\small{Reviewed and graded student code against established coding principles, providing timely feedback to reduce errors in future submissions by about 30\%.}
       \end{itemize}
@@ -144,14 +144,25 @@
         \begin{itemize}[leftmargin=0.14in, topsep=0pt, partopsep=0pt, itemsep=0pt]
       \item\small{Relevant modules taken: Data Structures and Algorithms (CS2040C), Programming Methodology (CS2030S), Computer Networks (CS2105), Software Engineering (CS2103T), Wireless Networking (CS4222), Operating Systems (CS2106)}
         \item\small{AY24/25 NUS Raffles Hall Executive Committee, Vice Chairperson}
-        \item\small{AY25/26 CS2103T Software Engineering Student Mentor}
-        \item\small{GPA: 4.45/5.00}
+        \item\small{Cumulative GPA: 4.45/5.00}
               \end{itemize}
       \end{itemize}
 
 %-----------PROJECTS-----------
 \sectionwithvspace{Projects}
     \begin{itemize}[leftmargin=0.15in, label={}, topsep=0pt, partopsep=0pt, itemsep=0pt]
+    \item
+        \begin{tabular*}{0.97\textwidth}{l@{\extracolsep{\fill}}r}
+          \textbf{Automated DevOps Incident Responder} & \small Dec 2025 \\
+        \end{tabular*}
+        \vspace{-4pt}
+          \begin{itemize}[leftmargin=0.14in, topsep=0pt, partopsep=0pt, itemsep=0pt]
+            \item\small{Architected an autonomous SRE agent using LangGraph, implementing a state-machine workflow that cyclically diagnoses runtime errors, queries documentation (Tavily API), and synthesises fix proposals.}
+            \item\small{Engineered deterministic data pipelines by enforcing strict JSON schemas and fallback parsing strategies, eliminating LLM format hallucinations and ensuring reliable downstream execution.}
+            \item\small{Developed Human-in-the-Loop checks and file system allow-listing (blocking .env/credential access) to prevent unauthorised command injection.}
+            \item\small{Implemented a comprehensive Test-Driven Development (TDD) strategy using Pytest and Mocks, isolating LLM logic for zero-cost CI/CD verification of routing and safety protocols.}
+          \end{itemize}
+          \vspace{-2pt}
       \item
         \begin{tabular*}{0.97\textwidth}{l@{\extracolsep{\fill}}r}
           \textbf{EcoTrack, Team Co-lead, NUS LifeHack 2025 Winner} & \small Jun 2025 \\
@@ -173,36 +184,19 @@
             \item\small{Collaborated closely as a 3-person team alongside a mentor to deliver a production-ready system under competition constraints, demonstrating strong product focus and cross-functional coordination.}
           \end{itemize}
           \vspace{-2pt}
-      \item
-        \begin{tabular*}{0.97\textwidth}{l@{\extracolsep{\fill}}r}
-          \textbf{RHDevs Inter-hall Hackathon, Team Co-lead, First Runner-up} & \small Dec 2023 \\
-        \end{tabular*}
-        \vspace{-4pt}
-          \begin{itemize}[leftmargin=0.14in, topsep=0pt, partopsep=0pt, itemsep=0pt, parsep=0pt]
-            \item\small{Developed and deployed a custom Telegram bot within a 24-hour timeframe to enhance room bidding processes in NUS residential halls, improving accessibility for 500+ residents and cut down bidding times by an estimated 50\%.}
-            \item\small{Led a team of 3 to clinch the award for 'Most Technical Hack', demonstrating rapid prototyping skills in a high-pressure environment.}
-          \end{itemize}
+        
     \end{itemize}
-      \vspace{-2pt}
 
 %-----------TECHNICAL SKILLS-----------
 \sectionwithvspace{Technical Skills}
  \begin{itemize}[leftmargin=0.15in, label={}, topsep=0pt, partopsep=0pt, itemsep=0pt, parsep=0pt]
     \item\footnotesize{
      \textbf{Languages}{: Python, C++, Java, SQL, TypeScript, HTML, CSS} \\
-     \textbf{Frameworks \& Libraries}{: React, JavaFX, OpenAI \&Gemini API, Telegram Bot API} \\
-     \textbf{Developer Tools}{: GitHub, Gradle, CodeCov, Supabase} \\
-     \textbf{Cloud \& Platforms}{: Azure, Microsoft Power Platform, Workato}
+     \textbf{Frameworks \& Libraries}{: React, LangChain, LangGraph, FastAPI, OpenAI \& Gemini API} \\
+     \textbf{Developer Tools}{: GitHub, Gradle, CodeCov, Supabase, Tavily} \\
+     \textbf{Cloud \& Platforms}{: Azure, Microsoft Power Platform, Google Cloud Vertex AI, Workato}
     }
  \end{itemize}
-
- %-----------CERTIFICATIONS-----------
-\sectionwithvspace{Certifications}
-    \begin{itemize}[leftmargin=0.15in, label={}, topsep=0pt, partopsep=0pt]
-        \item\small{
-        {CS50's Introduction to Artificial Intelligence with Python, CS50's Introduction to Databases with SQL, SCS-AWS GenAI (Foundational) Programme}\\
-        }
-    \end{itemize}
 
 %-------------------------------------------
 \end{document}
