--- a/resume.tex
+++ b/resume.tex
@@ -123,13 +123,13 @@
 
     \item 
       \begin{tabular*}{0.97\textwidth}[t]{l@{\extracolsep{\fill}}r}
-        \textbf{Cloud Engineer Intern – xCloud, HTX} & {\small May 2025 - Aug 2025} \\
+        \textbf{Cloud \& Software Engineer Intern – xCloud, HTX} & {\small May 2025 - Aug 2025} \\
       \end{tabular*}\\
       \vspace{0pt}
           \begin{itemize}[leftmargin=0.14in, topsep=0pt, partopsep=0pt, itemsep=0pt]
       \item\small{Implemented an automated image ingestion pipeline for HTX HR using Power Automate and Microsoft Dataverse, reducing manual data entry by 80\% every week, and ensuring 100\% availability for continued usage.}
       \item\small{Used Workato to automate tracking of external contractor leave, connecting a SharePoint data source with an external interface, eliminating 20 hours spent monthly on data syncing and email tracking across departments.}
-      \item\small{Operated with minimal supervision to facilitate and organise cloud solutions, working alongside DevOps, project mamangers, and product teams to address challenges and manage the resources of 4 projects in a dynamic setting.}
+      \item\small{Created Agentic AI agents to streamline operational workflows and improve manual analysis of documents by cutting repetitive processing tasks by 50\%.}
       \end{itemize}
   \end{itemize}
 
@@ -142,7 +142,8 @@
          {Bachelor of Computing (Hons.) Computer Science}
       \end{tabular*}
         \begin{itemize}[leftmargin=0.14in, topsep=0pt, partopsep=0pt, itemsep=0pt]
-      \item\small{Relevant modules taken: Data Structures and Algorithms (CS2040C), Programming Methodology (CS2030S), Computer Networks (CS2105), Software Engineering (CS2103T), Wireless Networking (CS4222), Operating Systems (CS2106)}
+      \item\small{Relevant modules taken: Data Structures and Algorithms (CS2040C), Java Programming Methodology (CS2030S), Computer Networks (CS2105), Software Engineering (CS2103T), Wireless Networking (CS4222), Operating Systems (CS2106), AI \& Machine Learning (CS2109S)}
+        \item\small{Distinction in Networks and Distributed Systems Focus Area}
         \item\small{AY24/25 NUS Raffles Hall Executive Committee, Vice Chairperson}
         \item\small{Cumulative GPA: 4.45/5.00}
               \end{itemize}
