--- a/resume.tex
+++ b/resume.tex
@@ -127,7 +127,7 @@
       \end{tabular*}\\
       \vspace{0pt}
           \begin{itemize}[leftmargin=0.14in, topsep=0pt, partopsep=0pt, itemsep=0pt]
-      \item\small{Implemented a FastAPI framework in Microsoft Power Automate to automate image ingestion pipeline for HTX HR, reducing manual data entry by 80\% every week, and ensuring 100\% availability for continued usage..}
+      \item\small{Implemented a REST API framework in Microsoft Power Automate to automate image ingestion pipeline for HTX HR, reducing manual data entry by 80\% every week, and ensuring 100\% availability for continued usage..}
       \item\small{Used Workato to automate tracking of external contractor leave, connecting a SharePoint data source with an external interface, eliminating 20 hours spent monthly on data syncing and email tracking across departments.}
       \item\small{Created Agentic AI agents to streamline operational workflows and improve manual analysis of documents by cutting repetitive processing tasks by 50\%.}
       \end{itemize}
