--- a/resume.tex
+++ b/resume.tex
@@ -180,7 +180,7 @@
         \end{tabular*}
         \vspace{-4pt}
           \begin{itemize}[leftmargin=0.14in, topsep=0pt, partopsep=0pt, itemsep=0pt]
-            \item\small{Co-led development of a real-time scam detection platform, integrating a mobile app and Telegram bot to enable instant user reporting and rapid dissemination of verified scam intelligence.}
+            \item\small{Full-stack development of a real-time scam detection platform, integrating a React Native mobile app and Telegram bot to enable instant user reporting and rapid dissemination of verified scam intelligence.}
             \item\small{Implemented custom LLM pipelines, utilising prompt engineering, semantic embedding, and real-time input processing, transforming raw user reports into over 100 validated insights and concise summaries.}
             \item\small{Collaborated closely as a 3-person team alongside a mentor to deliver a production-ready system under competition constraints, demonstrating strong product focus and cross-functional coordination.}
           \end{itemize}
