--- a/resume.tex
+++ b/resume.tex
@@ -114,9 +114,9 @@
       \end{tabular*}\\
       \vspace{0pt}
           \begin{itemize}[leftmargin=0.14in, topsep=0pt, partopsep=0pt, itemsep=0pt]
-      \item\small{Mentored 10 students in Java, including Git, CI/CD pipelines, SDLC, software testing, and software architecture for scalable and efficient systems, achieving a 100\% pass rate with B+ or better scores, and a tutor rating of 4.5/5.0.}
+      \item\small{Mentored students in Java, explaining Git, CI/CD pipelines, SDLC, software testing, and software architecture for scalable and efficient systems, achieving a 100\% pass rate with B+ or better scores, and a tutor rating of 4.5/5.0.}
       \item\small{Contributed to refinement and development of course materials, including walkthrough guides and sample code.}
-      \item\small{Reviewed and graded student code against established coding principles, providing timely feedback to reduce errors in future submissions by about 30\%.}
+      \item\small{Reviewed and graded student code against established coding principles, providing timely feedback to reduce errors in future submissions by about 70\%.}
       \end{itemize}
     \vspace{-2pt}
 
