--- a/resume.tex
+++ b/resume.tex
@@ -110,7 +110,7 @@
   \begin{itemize}[leftmargin=0.15in, label={}, topsep=0pt, partopsep=0pt, itemsep=0pt]
       \item 
       \begin{tabular*}{0.97\textwidth}[t]{l@{\extracolsep{\fill}}r}
-        \textbf{Undergraduate Teaching Assistant – Software Engineering} & {\small Aug 2025 - Dec 2025} \\
+        \textbf{SWE Undergraduate Teaching Assistant – NUS} & {\small Aug 2025 - Dec 2025} \\
       \end{tabular*}\\
       \vspace{0pt}
           \begin{itemize}[leftmargin=0.14in, topsep=0pt, partopsep=0pt, itemsep=0pt]
@@ -123,7 +123,7 @@
 
     \item 
       \begin{tabular*}{0.97\textwidth}[t]{l@{\extracolsep{\fill}}r}
-        \textbf{Cloud \& Software Engineer Intern – xCloud, HTX} & {\small May 2025 - Aug 2025} \\
+        \textbf{Cloud \& Software Engineer Intern –  HTX, Singapore} & {\small May 2025 - Aug 2025} \\
       \end{tabular*}\\
       \vspace{0pt}
           \begin{itemize}[leftmargin=0.14in, topsep=0pt, partopsep=0pt, itemsep=0pt]
@@ -154,7 +154,7 @@
     \begin{itemize}[leftmargin=0.15in, label={}, topsep=0pt, partopsep=0pt, itemsep=0pt]
     \item
         \begin{tabular*}{0.97\textwidth}{l@{\extracolsep{\fill}}r}
-          \textbf{Automated DevOps Incident Responder} & \small Dec 2025 \\
+          \textbf{Automated DevOps Incident Responder} & \small Dec 2025 - Jan 2026 \\
         \end{tabular*}
         \vspace{-4pt}
           \begin{itemize}[leftmargin=0.14in, topsep=0pt, partopsep=0pt, itemsep=0pt]
